tests/NormalTests/paczka1/small_fuzzy/68320487.err
Error in line 1: S64 S64 84,7
Error in line 3: cwh S479 98,2
Error in line 2: bZIb5m A649 26,8
